tests/baselines/reference/emitArrowFunctionWhenUsingArguments09.errors.txt
emitArrowFunctionWhenUsingArguments09.ts(2,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.


==== emitArrowFunctionWhenUsingArguments09.ts (1 errors) ====
    function f(_arguments) {
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES5. Consider using a standard function expression.
    }